ja-source/docusaurus-plugin-content-docs/version-2.1/sql-manual/sql-statements/cluster-management/instance-management/ADD-BACKEND.md
---
{
  "title": "バックエンドを追加",
  "language": "ja",
  "description": "ADD BACKENDは、Dorisクラスターにひとつまたは複数のBEノードを追加するために使用されます。"
}
---
## 説明

ADD BACKENDは、Dorisクラスターにひとつまたは複数のBEノードを追加するために使用されます。このコマンドにより、管理者は新しいBEノードのホストとポートを指定し、さらにそれらの動作を設定するためのオプションのプロパティを指定できます。

## 構文

```sql
ALTER SYSTEM ADD BACKEND "<host>:<heartbeat_port>"[,"<host>:<heartbeat_port>" [, ...]] [PROPERTIES ("<key>"="<value>" [, ...] )]
```
## 必須パラメータ

**1. <host>**

> BEノードのホスト名またはIPアドレスを指定できます。

**2. <heartbeat_port>**

> BEノードのheartbeatポート。デフォルトは9050です。

## オプションパラメータ

**1. `PROPERTIES ("<key>"="<value>" [, ... ] )`**

> BEノードの追加プロパティを定義するために使用されるキー値ペアのセット。これらのプロパティは、追加されるBEの設定をカスタマイズするために使用できます。利用可能なプロパティには以下が含まれます：
> - `tag.location`: BEノードが属するResource Groupを指定するために使用されます。

## アクセス制御要件

このSQLを実行するユーザーは、少なくとも以下の権限を持つ必要があります：

| Privilege | Object | Notes |
|-----------|----|-------|
| NODE_PRIV |    |       |

## 使用上の注意

1. 新しいBEノードを追加する前に、ノードが正しく設定され、実行されていることを確認してください。
2. [Resource Group](../../../../admin-manual/workload-management/resource-group.md)を使用することで、クラスター内のBEノードをより適切に管理および整理できます。
3. 複数のBEノードを追加する場合、効率性を向上させるために1つのコマンドでそれらを指定できます。
3. BEノードを追加した後、[`SHOW BACKENDS`](./SHOW-BACKENDS.md)を使用して、正常に追加され、正常な状態にあるかを確認してください。
4. クラスターの可用性と耐障害性を向上させるために、異なる物理的な場所またはラックにBEノードを追加することを検討してください。
5. 新しく追加されたBEノードが適切に活用されるよう、クラスター内の負荷を定期的にチェックし、バランスを取ってください。

## 例

1. 追加プロパティなしでBEノードを追加

   ```sql
   ALTER SYSTEM ADD BACKEND "192.168.0.1:9050,192.168.0.2:9050";
   ```
このコマンドは2つのBEノードをクラスターに追加します：
   * 192.168.0.1、ポート9050
   * 192.168.0.2、ポート9050
   追加のプロパティは指定されていないため、デフォルト設定が適用されます。

2. 指定されたResource GroupにBEノードを追加する

   ```sql
   ALTER SYSTEM ADD BACKEND "doris-be01:9050" PROPERTIES ("tag.location" = "groupb");
   ```
このコマンドは、単一のBEノード（ホスト名doris-be01、ポート9050）をクラスター内のResource Group `groupb`に追加します。
