ja-source/docusaurus-plugin-content-docs/version-3.x/sql-manual/sql-statements/cluster-management/instance-management/ADD-BACKEND.md
---
{
  "title": "バックエンドの追加",
  "description": "ADD BACKENDは、Dorisクラスターにひとつまたはそれ以上のBEノードを追加するために使用されます。",
  "language": "ja"
}
---
## デスクリプション

ADD BACKENDは、Dorisクラスターに1つ以上のBEノードを追加するために使用されます。このコマンドにより、管理者は新しいBEノードのホストとポートを指定し、さらにそれらの動作を設定するオプションのプロパティを指定することができます。

## Syntax

```sql
ALTER SYSTEM ADD BACKEND "<host>:<heartbeat_port>"[,"<host>:<heartbeat_port>" [, ...]] [PROPERTIES ("<key>"="<value>" [, ...] )]
```
## 必須パラメータ

**1. <host>**

> BEノードのホスト名またはIPアドレスを指定できます。

**2. <heartbeat_port>**

> BEノードのハートビートポート。デフォルトは9050です。

## オプションパラメータ

**1. `PROPERTIES ("<key>"="<value>" [, ... ] )`**

> BEノードの追加プロパティを定義するために使用されるキーと値のペアのセット。これらのプロパティは、追加されるBEの設定をカスタマイズするために使用できます。利用可能なプロパティには以下が含まれます：
> - `tag.location`：ストレージ・コンピュート統合モードにおいて、BEノードが属するResource Groupを指定するために使用されます。
> - `tag.compute_group_name`：ストレージ・コンピュート分離モードにおいて、BEノードが属するコンピュートグループを指定するために使用されます。
> - `tag.public_endpoint`：外部アクセス用のBEノードのパブリックエンドポイントを指定するために使用されます（例：`11.10.20.12:8010`）。これは通常、外部ユーザーアクセス用のロードバランサードメイン名またはパブリックIPです。
> - `tag.private_endpoint`：プライベートネットワークアクセス用のBEノードのプライベートエンドポイントを指定するために使用されます（例：`10.10.10.9:8020`）。これは通常、VPC内部アクセスまたはクラスタ内のKubernetes Service IPに使用されます。

## アクセス制御要件

このSQLを実行するユーザーは、少なくとも以下の権限を持つ必要があります：

| Privilege | Object | 注釈 |
|-----------|----|-------|
| NODE_PRIV |    |       |

## 使用上の注意

1. 新しいBEノードを追加する前に、そのノードが正しく設定され、実行されていることを確認してください。
2. Resource Groupを使用することで、クラスタ内のBEノードをより適切に管理・整理できます。
3. 複数のBEノードを追加する場合、1つのコマンドでそれらを指定して効率を向上させることができます。
3. BEノードを追加した後、[`SHOW BACKENDS`](./SHOW-BACKENDS.md)を使用して、それらが正常に追加され、正常な状態にあるかを確認してください。
4. クラスタの可用性と耐障害性を向上させるために、異なる物理的な場所やラックにBEノードを追加することを検討してください。
5. 新しく追加されたBEノードが適切に利用されるよう、クラスタ内の負荷を定期的にチェックし、バランスを取ってください。

## 例

1. 追加プロパティなしでBEノードを追加

   ```sql
   ALTER SYSTEM ADD BACKEND "192.168.0.1:9050,192.168.0.2:9050";
   ```
このコマンドは、2つのBEノードをクラスターに追加します：
   * 192.168.0.1、ポート9050
   * 192.168.0.2、ポート9050
   追加のプロパティが指定されていないため、デフォルト設定が適用されます。

2. ストレージ・コンピューティング統合モードでは、指定されたResource GroupにBEノードを追加します

   ```sql
   ALTER SYSTEM ADD BACKEND "doris-be01:9050" PROPERTIES ("tag.location" = "groupb");
   ```
このコマンドは、単一のBEノード（ホスト名doris-be01、ポート9050）をクラスター内のResource Group `groupb`に追加します。

3. ストレージとコンピューティングの分離モードにおいて、指定されたコンピュートグループにBEノードを追加する

   ```sql
   ALTER SYSTEM ADD BACKEND "192.168.0.3:9050" PROPERTIES ("tag.compute_group_name" = "cloud_groupc");
   ```
このコマンドは、クラスター内のコンピュートグループ`cloud_groupc`に単一のBEノード（IP 192.168.0.3、ポート9050）を追加します。

4. 複雑なネットワーク環境用にパブリックエンドポイントとプライベートエンドポイントを設定したBEノードを追加する

   ```sql
   ALTER SYSTEM ADD BACKEND "192.168.1.1:9050" PROPERTIES (
       "tag.public_endpoint" = "11.10.20.12:8010",
       "tag.private_endpoint" = "10.10.10.9:8020"
   );
   ```
このコマンドは、複数のネットワークエンドポイントを持つBEノードを追加します：
   * `192.168.1.1:9050`: クラスター通信用の内部アドレス（be_host）
   * `11.10.20.12:8010`: ロードバランサーを通じた外部ユーザーアクセス用のパブリックエンドポイント
   * `10.10.10.9:8020`: VPC内部またはKubernetesクラスター間アクセス用のプライベートエンドポイント

   この設定は、BEノードが異なるネットワークコンテキストからアクセス可能である必要があるクラウド環境やKubernetesクラスターで有用です。詳細については、Complex Network EnvironmentsでのStream Loadを参照してください。
